# Sportyqo-Project

./: App.js  README.md  index.html  manifest.json  package-lock.json  package.json
Android App/: ARCHITECTURE.md  README_BACKEND.md  README_FRONTEND.md  start-frontend-backend.sh
Android App/backend/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Android App/backend/alembic/: README  env.py
Android App/backend/app/: main.py  seed.py
Android App/backend/app/api/: deps.py
Android App/backend/app/api/v1/: auth.py  dugout.py  leagues.py  matches.py  media.py  profiles.py  router.py  scores.py
Android App/backend/app/core/: config.py  errors.py  logging.py  middleware.py  security.py  telemetry.py
Android App/backend/app/db/: session.py
Android App/backend/app/events/: bus.py  handlers.py
Android App/backend/app/models/: __init__.py  league.py  match.py  media.py  profile.py  score.py  social.py  user.py
Android App/backend/app/repositories/: base.py  league_repo.py  match_repo.py  media_repo.py  score_repo.py  user_repo.py
Android App/backend/app/schemas/: auth.py  common.py  dugout.py  league.py  match.py  media.py  profile.py  score.py
Android App/backend/app/services/: auth_service.py  dugout_service.py  league_service.py  match_service.py  media_service.py  notification_service.py  profile_service.py  sample_data.py
Android App/backend/app/services/score/: cards.py  engine.py  ranking.py  strategies.py
Android App/backend/app/workers/: tasks.py  worker.py
Android App/frontend-test/: app.js  (+4 more)
